--- a/src/jump/jump.css
+++ b/src/jump/jump.css
@@ -54,8 +54,24 @@ section {
   background-color: burlywood;
   width: 600px;
   height: 600px;
-}
 
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+
+
+}
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
+}
 @media screen and (max-width: 768px) {
   .board {
     max-width: 100vw;
@@ -65,14 +81,18 @@ section {
 
 .bird {
   position: absolute;
-  background-color: crimson;
-  height: 40px;
-  width: 40px;
+  height: 80px;
+  width: 80px;
   border-radius: 50%; 
+  background-image: url("bird.gif") ;
+  background-size: cover;
+  background-color: transparent;
 }
 
 .obstacles {
-  position: absolute;  
-  background-color: blue;
+  position: absolute;   
   width: 30px;
+  background-color: transparent;
+  background-image: url(lighting.gif);
+  background-size: contain
 }
